tests/ui/msg_send_id_invalid_receiver.stderr
error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_receiver.rs:8:55
   |
8  |     let _: Id<Object, Shared> = unsafe { msg_send_id![obj, alloc].unwrap() };
   |                                          -------------^^^--------
   |                                          |            |
   |                                          |            expected struct `objc2::runtime::Class`, found struct `objc2::runtime::Object`
   |                                          arguments to this function are incorrect
   |
   = note: expected reference `&objc2::runtime::Class`
              found reference `&objc2::runtime::Object`
note: associated function defined here
  --> $WORKSPACE/objc2/src/__macro_helpers.rs
   |
   |     unsafe fn send_message_id<A: MessageArguments>(
   |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_receiver.rs:9:55
   |
9  |     let _: Id<Object, Shared> = unsafe { msg_send_id![obj, init].unwrap() };
   |                                          -------------^^^-------
   |                                          |            |
   |                                          |            expected enum `Option`, found `&objc2::runtime::Object`
   |                                          arguments to this function are incorrect
   |
   = note:   expected enum `Option<Id<_, _>>`
           found reference `&objc2::runtime::Object`
note: associated function defined here
  --> $WORKSPACE/objc2/src/__macro_helpers.rs
   |
   |     unsafe fn send_message_id<A: MessageArguments>(
   |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_receiver.rs:12:55
   |
12 |     let _: Id<Object, Shared> = unsafe { msg_send_id![cls, init].unwrap() };
   |                                          -------------^^^-------
   |                                          |            |
   |                                          |            expected enum `Option`, found `&objc2::runtime::Class`
   |                                          arguments to this function are incorrect
   |
   = note:   expected enum `Option<Id<_, _>>`
           found reference `&objc2::runtime::Class`
note: associated function defined here
  --> $WORKSPACE/objc2/src/__macro_helpers.rs
   |
   |     unsafe fn send_message_id<A: MessageArguments>(
   |               ^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Id<objc2::runtime::Object, Shared>: MessageReceiver` is not satisfied
  --> ui/msg_send_id_invalid_receiver.rs:15:42
   |
15 |     let _: Id<Object, Shared> = unsafe { msg_send_id![obj, copy].unwrap() };
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^ the trait `MessageReceiver` is not implemented for `Id<objc2::runtime::Object, Shared>`
   |
   = help: the following other types implement trait `MessageReceiver`:
             &'a Id<T, O>
             &'a mut Id<T, objc2::rc::Owned>
   = note: required because of the requirements on the impl of `MsgSendId<Id<objc2::runtime::Object, Shared>, Option<Id<_, _>>>` for `Assert<false, false, true>`
   = note: this error originates in the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)
